tests/valid/DoWhile_Valid_2.whiley




public export method test() :
    int i = 0
    do:
        if i == 2:
            break
        i = i + 1
    while i < 5
    assume i == 2
